# ilploss

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
src/: ilploss.yaml  trainer.py
src/ilploss/: __init__.py  cores.py  data.py  encoders.py  ilp.py  losses.py  models.py  pl_utils.py  samplers.py  solvers.py  utils.py
src/ilploss.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: comboptnet.py  demo.py  random.py  utils.py
tests/data/random/binary/16_dim/1_const/0/: dataset.pt
tests/data/random/binary/16_dim/1_const/1/: dataset.pt
tests/data/random/binary/16_dim/1_const/2/: dataset.pt
tests/data/random/binary/16_dim/1_const/3/: dataset.pt
tests/data/random/binary/16_dim/1_const/4/: dataset.pt
tests/data/random/binary/16_dim/1_const/5/: dataset.pt
tests/data/random/binary/16_dim/1_const/6/: dataset.pt
tests/data/random/binary/16_dim/1_const/7/: dataset.pt
tests/data/random/binary/16_dim/1_const/8/: dataset.pt
tests/data/random/binary/16_dim/1_const/9/: dataset.pt
tests/data/random/binary/16_dim/2_const/0/: dataset.pt
tests/data/random/binary/16_dim/2_const/1/: dataset.pt
tests/data/random/binary/16_dim/2_const/2/: dataset.pt
tests/data/random/binary/16_dim/2_const/3/: dataset.pt
tests/data/random/binary/16_dim/2_const/4/: dataset.pt
tests/data/random/binary/16_dim/2_const/5/: dataset.pt
tests/data/random/binary/16_dim/2_const/6/: dataset.pt
tests/data/random/binary/16_dim/2_const/7/: dataset.pt
tests/data/random/binary/16_dim/2_const/8/: dataset.pt
tests/data/random/binary/16_dim/2_const/9/: dataset.pt
(+60 files in other folders)
